--- a/MainWebsiteCode.html
+++ b/MainWebsiteCode.html
@@ -16,7 +16,7 @@
 
     <h3>Henry</h3>
 
-    <img src="raw.githubusercontent.com/Hammynator/HenryControl.io/main/Images/SmileMan.jpg" width="300"> <br> <br>
+    <img src="github.com/Hammynator/HenryControl.io/blob/main/Images/SmileMan.jpg" width="300"> <br> <br>
 
     
 
