--- a/MainWebsiteCode.html
+++ b/MainWebsiteCode.html
@@ -16,7 +16,7 @@
 
     <h3>Henry</h3>
 
-    <img src="https://hammynator.github.io/Hammynator/HenryControl.io/blob/main/Images/SmileMan.jpg" width="300"> <br> <br>
+    <img src="/Hammynator/HenryControl.io/blob/main/Images/SmileMan.jpg?raw=true" width="300"> <br> <br>
 
     
 
