--- a/MainWebsiteCode.html
+++ b/MainWebsiteCode.html
@@ -16,7 +16,7 @@
 
     <h3>Henry</h3>
 
-    <img src="../Images/SmileMan.jpg"> <br> <br>
+    <img src="./Images/SmileMan.jpg"> <br> <br>
 
     
 
